examples/test/testpolicy6707.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6707
  namespace: namespace3
spec:
  podSelector:
    matchLabels:
      key17: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value44
          key38: value17
      podSelector:
        matchLabels:
          key38: value12
          key10: value25
          key40: value46
